<resources>

    <string name="moment">모먼트</string>
    <string name="globe">글로브</string>
    <string name="date">날짜</string>
    <string name="content">내용</string>
    <string name="place">장소</string>
    <string name="oldest">오래된순</string>
    <string name="nearest">가까운순</string>
    <string name="most_recent">최신순</string>
    <string name="moment_picture">모먼트 사진</string>
    <string name="add_button">추가 버튼</string>
    <string name="home">홈</string>
    <string name="dragger">드래거</string>

    <string name="add_moment">모먼트 남기기</string>
    <string name="place_search">장소 선택</string>
    <string name="place_check">장소 확인</string>


    <string name="add_moment_picture_title">사진 (%d/5)</string>
    <string name="add_moment_content_length">%d/500자</string>
    <string name="add_moment_content_hint">내용을 입력해주세요</string>
    <string name="add_moment_place_hint">터치하여 장소를 검색해 주세요</string>
    <string name="add_moment_save">남기기</string>

    <string name="place_search_hint">모먼트를 남길 장소를 검색해보세요</string>
    <string name="place_search_result">검색결과 %d</string>

    <string name="item_picture_description">This is the picture you added.</string>
    <string name="item_picture_remove_picture_description">remove picture</string>

    <string name="moment_detail_globes">%s 글로브 +%d</string>
    <string name="moment_detail_no_globe" />

    <string name="text_indicator">%d/%d</string>

    <string name="dialog_place_positive">여기가 맞는 것 같아요!</string>
    <string name="dialog_place_negative">여기가 아닌 것 같아요..</string>

    <string name="network_error">네트워크 연결을 확인해 주세요.</string>

    <string name="add_globe_dialog_title">글로브 만들기</string>
    <string name="update_globe_name_dialog_title">글로브 이름 수정하기</string>
    <string name="add_globe_dialog_hint">글로브 이름을 입력하세요.</string>
    <string name="delete_globe_dialog_content_first">정말로 글로브를</string>
    <string name="delete_moment_dialog_content_first">정말로 모먼트를</string>
    <string name="delete_globe_dialog_content_second">삭제하시겠습니까?</string>
    <string name="delete_globe_dialog_content_detail">모먼트는 남아있지만, 글로브에서 삭제됩니다.</string>
    <string name="delete_moment_dialog_content_detail">한 번 삭제한 모먼트는 복구할 수 없습니다.</string>
    <string name="delete_default_globe_error_msg">Default 글로브는 삭제할 수 없습니다!</string>

    <string name="cancel">취소</string>
    <string name="add">추가</string>
    <string name="update">수정</string>
    <string name="do_delete">삭제하기</string>
    <string name="delete">삭제</string>
    <string name="globe_detail_menu_add_moment">모먼트 추가하기</string>
    <string name="globe_detail_menu_delete_moment">모먼트 삭제하기</string>
    <string name="globe_detail_menu_update_globe">글로브 이름 수정하기</string>
    <string name="globe_detail_menu_delete_globe">글로브 삭제하기</string>
    <string name="globe_detail_empty_msg">\'모먼트 추가하기\'를 눌러 추가해보세요! ↑</string>
    <string name="globe_detail_empty_content">말끔~</string>
    <string name="globe_detail_empty_content_detail">이 글로브에는 모먼트가 없습니다.</string>

    <string name="moment_detail_menu_update_moment">모먼트 수정하기</string>
    <string name="moment_detail_menu_delete_moment">모먼트 삭제하기</string>

    <string name="snack_bar_message_add_globe">글로브가 생성되었습니다.</string>
    <string name="snack_bar_error_message_add_globe">해당 글로브의 이름 이미 존재합니다. 글로브가 만들어지지 않았습니다.</string>
    <string name="snack_bar_message_update_globe_name">글로브 이름이 수정되었습니다.</string>
    <string name="snack_bar_message_error_update_globe_name">해당 글로브의 이름 이미 존재합니다. 글로브의 이름이 변경되지 않았습니다.</string>

    <string name="add_moment_in_globe">모먼트 추가하기</string>
    <string name="add_moment_default_error_in_globe_msg">\'기본\' 글로브에서는 모먼트를 추가할 수 없습니다.</string>
    <string name="add_moment_empty_error_in_globe_msg">해당 글러브에 추가할 모먼트가 없습니다.</string>
    <string name="moment_in_globe_count">%d개 선택되었습니다.</string>

    <string name="delete_moment_in_globe">모먼트 삭제하기</string>
    <string name="delete_moment_error_in_globe_msg">삭제할 모먼트가 존재하지 않습니다.</string>
    <string name="delete_moment_empty_error_in_globe_msg">해당 글러브에 삭제할 모먼트가 없습니다.</string>
    <string name="delete_moment_default_error_in_globe_msg">\'기본\' 글로브에서는 모먼트를 삭제할 수 없습니다.</string>

    <string name="temperature_celsius">%.1f°C</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_moment_list">지금 이 순간을 기록해보세요.</string>
    <string name="setting_theme">테마 설정</string>
    <string name="tv_personal_information_processing_policy">개인정보처리방침</string>
    <string name="setting_alarm">알림 설정</string>
    <string name="save_moment_complete">모먼트를 기록하였습니다.</string>
    <string name="write_moment">모먼트를 기록하였습니다.</string>
    <string name="update_moment">모먼트를 수정하였습니다.</string>

    <!-- 개인 정보 처리 방침 -->
    <string name="tv_personal_information_processing_policy_content">
        *&lt; 모글 &gt;(\' https://scientific-petunia-d2d.notion.site/97b44329677743c080656e266846ff79 \'이하 \'모글\')*은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다. \n
\n
○ *이 개인정보처리방침은 2022년 12월 6부터 적용됩니다.*\n
\n
**제1조(개인정보의 처리 목적)*&lt; 모글 &gt;(\'https://scientific-petunia-d2d.notion.site/97b44329677743c080656e266846ff79\'이하 \'모글\')*은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.**\n
\n
1. 재화 또는 서비스 제공\n
\n
서비스 제공을 목적으로 개인정보를 처리합니다.\n
\n
**제2조(개인정보의 처리 및 보유 기간)**① *&lt; 모글 &gt;*은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.\n
\n
**제3조(처리하는 개인정보의 항목)**① *&lt; 모글 &gt;*은(는) 다음의 개인정보 항목을 처리하고 있습니다.\n
\n
**제4조(개인정보의 제3자 제공에 관한 사항)**① *&lt; 모글 &gt;은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.*\n
\n
*② &lt; 모글 &gt;은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.*\n
\n
- *1. &lt; 네이버 지도 &gt;*\n
- *개인정보를 제공받는 자 : 네이버 지도*\n
- *제공받는 자의 개인정보 이용목적 : 위치*\n
- *제공받는 자의 보유.이용기간: 준영구*\n
\n
***제5조(개인정보처리의 위탁에 관한 사항)**① &lt; 모글 &gt;은(는) 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.\n
② &lt; 모글 &gt;은(는) 위탁계약 체결시 「개인정보 보호법」 제26조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.\n
③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.\n
**제6조(개인정보의 파기절차 및 파기방법)**\n
① &lt; 모글 &gt; 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다.② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다.1. 법령 근거 :2. 보존하는 개인정보 항목 : 계좌정보, 거래날짜③ 개인정보 파기의 절차 및 방법은 다음과 같습니다.1. 파기절차&lt; 모글 &gt; 은(는) 파기 사유가 발생한 개인정보를 선정하고, &lt; 모글 &gt; 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.\n
2. 파기방법\n
전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다\n
**제7조(정보주체와 법정대리인의 권리·의무 및 그 행사방법에 관한 사항)**\n
① 정보주체는 모글에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의 권리를 행사할 수 있습니다.\n
② 제1항에 따른 권리 행사는모글에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 모글은(는) 이에 대해 지체 없이 조치하겠습니다.\n
③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다.이 경우 “개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.\n
④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.\n
⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.\n
⑥ 모글은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.\n
**제8조(개인정보의 안전성 확보조치에 관한 사항)&lt; 모글 &gt;은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.**\n
1. 개인정보에 대한 접근 제한개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.\n
**제9조(개인정보를 자동으로 수집하는 장치의 설치·운영 및 그 거부에 관한 사항)**\n
모글 은(는) 정보주체의 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용하지 않습니다.\n
**제10조 (개인정보 보호책임자에 관한 사항)**\n
① 모글 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.\n
• ▶ 개인정보 보호책임자\n
• 성명 :모글\n
• 직책 :담당자\n
• 직급 :담당자\n
• 연락처 :wakeup.mogle@gmail.com\n
※ 개인정보 보호 담당부서로 연결됩니다.\n
\n
• ▶ 개인정보 보호 담당부서\n
• 부서명 :모글\n
• 담당자 :담당자\n
• 연락처 :wakeup.mogle@gmail.com\n
② 정보주체께서는 모글 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 모글 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.\n
**제11조(개인정보의 열람청구를 접수·처리하는 부서)정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다.&lt; 모글 &gt;은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다.**\n
• ▶ 개인정보 열람청구 접수·처리 부서\n
• 부서명 :모글\n
• 담당자 :담당자\n
• 연락처 :wakeup.mogle@gmail.com\n
**제12조(정보주체의 권익침해에 대한 구제방법)**정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.1. 개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)2. 개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)3. 대검찰청 : (국번없이) 1301 (www.spo.go.kr)4. 경찰청 : (국번없이) 182 (ecrm.cyber.go.kr)「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(www.simpan.go.kr) 홈페이지를 참고하시기 바랍니다.\n
**제13조(개인정보 처리방침 변경)**\n
\n
① 이 개인정보처리방침은 2023년 1월 1부터 적용됩니다.\n
\n
② 이전의 개인정보 처리방침은 아래에서 확인하실 수 있습니다.\n
- 2022. 12. 6 ~ 2023. 02. 05 적용 ([클릭](\' https://scientific-petunia-d2d.notion.site/2022-12-06-082b5a403bf14e8483b775fac64909e1 \'))*\n
    </string>

</resources>